Removed unused endpoints
